# backend

./: .env.example  Cargo.toml
src/: config.rs  main.rs  server.rs
src/db/: mod.rs  tables.rs
src/route/: account.rs  eligible.rs  mod.rs  stat.rs  utils.rs
src/storage/migrations/2023-12-11-160227_init/: up.sql
src/watcher/: watcher.rs
