[package]
name = "octupus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-rt = "2.2.0"
actix-web = { version = "4" }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15.1"
envy = "0.4"
log = "0.4.17"
env_logger = "0.10.0"
ctrlc = { version = "3.1", features = ["termination"] }
rbatis = "4.3.0"
rbdc-pg={ version="4.3" }
rbs = "4.3.2"
futures = { version = "0.3", features = ["compat"] }
num = { version = "0.4.0", features = ["serde"] }
serde = "1.0.137"
serde_json = "1.0.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
bigdecimal = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
qstring = "0.7.2"
itertools = "0.10.5"
reqwest = "0.11.22"
solana-sdk = "2.1.4"
solana-client = "2.1.4"
solana-transaction-status = "2.1.4"
rand = "0.8.5"
bincode = "1.3.3"
base58 = "0.2.0"
borsh = "1.5.3"
rayon = "1.10.0"